removed the css chart as it owerwrote the scss

--- a/src/sass/partials/_layout.scss
+++ b/src/sass/partials/_layout.scss
@@ -1,3 +1,14 @@
+.navbar-light .navbar-nav .nav-link {
+  color: blue;
+}
+
+.form-control.navsearch {
+  background-color: #E6E6E6;
+  color: #808080;
+  border-radius: 30px;
+  border: 1px solid black;
+}
+
 .navsearch--result {
   border: 1px solid #ccc;
   background: #ccc;
