--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,5 +1,11 @@
+$navbar-dark-color: green;
+
 @import "partials/layout";
 @import "partials/typography";
 @import "partials/base";
 @import "partials/home";
 @import "partials/modal";
+
+
+
+
