--- a/src/sass/partials/_layout.scss
+++ b/src/sass/partials/_layout.scss
@@ -1,5 +1,5 @@
-.navbar-light .navbar-nav .nav-link {
-  color: blue;
+.nav-link.active {
+  border-bottom: 3px solid $primary;
 }
 
 .form-control.navsearch {
