--- a/src/sass/partials/_home.scss
+++ b/src/sass/partials/_home.scss
@@ -4,6 +4,7 @@
   border-radius: 20px;
   margin-top: 30px;
   background-position: center;
+  position: relative;
 
   &--text {
     position: absolute;
