--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,4 +1,11 @@
-$navbar-dark-color: green;
+$navbar-dark-color: black;
+$navbar-dark-active-color: #808080;
+$navbar-dark-hover-color: #808080;
+$dark: white;
+$primary: #F29F05;
+//$font-family-sans-serif: "Open Sans";
+$navbar-dark-toggler-border-color: #808080;
+//$h6-font-size: 0.8em;
 
 @import "partials/layout";
 @import "partials/typography";
