--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -3,6 +3,7 @@ $navbar-dark-active-color: #808080;
 $navbar-dark-hover-color: #808080;
 $dark: white;
 $primary: #F29F05;
+$secondary: #F2B705;
 //$font-family-sans-serif: "Open Sans";
 $navbar-dark-toggler-border-color: #808080;
 //$h6-font-size: 0.8em;
