--- a/src/sass/partials/_layout.scss
+++ b/src/sass/partials/_layout.scss
@@ -1,3 +1,5 @@
+/* nav */
+
 .nav-link.active {
   border-bottom: 3px solid $primary;
 }
@@ -27,4 +29,10 @@
   & ul li:hover {
     background: #eee;
   }
+}
+
+/* footer */
+
+.footer {
+  background: $secondary;
 }
