styling accommodations page

--- a/src/sass/partials/_typography.scss
+++ b/src/sass/partials/_typography.scss
@@ -1,3 +1,12 @@
-h2 {
-  font-size: 70px;
+.accommodations--title {
+  font-size: 25px;
+}
+
+.accommodations--address {
+  font-size: 20px;
+  color: #808080;
+}
+
+.accommodations--facility {
+  font-size: 14px;
 }
