--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,6 +1,7 @@
 $light: white;
 $primary: #F29F05;
 $secondary: #F2B705;
+$success: #22B527;
 $colorDarkGrey: #808080;
 $navbar-dark-color: black;
 $navbar-dark-active-color: $colorDarkGrey;
