--- a/src/sass/partials/_typography.scss
+++ b/src/sass/partials/_typography.scss
@@ -1,3 +1,12 @@
+body {
+  margin: 0;
+  font-family: 'Montserrat',
+  sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+/* accommodations */
 .accommodations--title {
   font-size: 25px;
 }
@@ -14,4 +23,9 @@
 .accommodations--price {
   font-size: 60px;
   color: $colorDarkGrey;
+}
+
+/* accommodation */
+.accommodation--textcontainer {
+  font-size: 20px;
 }
