added grid to the pictures on the detail page

--- a/src/sass/partials/_accommodation.scss
+++ b/src/sass/partials/_accommodation.scss
@@ -1,2 +1,8 @@
 .accommodation--facility {
-  background-color: $colorDarkGrey}
+  background-color: $colorDarkGrey
+}
+
+.accommodation--image {
+  border-radius: 20px;
+  border: 1px solid #808080;
+}
