--- a/src/sass/partials/_accommodation.scss
+++ b/src/sass/partials/_accommodation.scss
@@ -6,3 +6,11 @@
   border-radius: 20px;
   border: 1px solid #808080;
 }
+
+.enquiryform--container {
+  background-color: $colorDarkGrey;
+  padding-top: 100px;
+  padding-bottom: 100px;
+  border-radius: 20px;
+  margin-top: 70px;
+}
