--- a/src/sass/partials/_typography.scss
+++ b/src/sass/partials/_typography.scss
@@ -29,3 +29,11 @@ body {
 .accommodation--textcontainer {
   font-size: 20px;
 }
+
+.accommodation--distance {
+  font-size: 14px;
+}
+
+.accommodation--area {
+  font-weight: 600;
+}
