--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -3,6 +3,7 @@ $primary: #F29F05;
 $secondary: #F2B705;
 $success: #22B527;
 $colorDarkGrey: #808080;
+$colorLightGrey: #F7F7F7;
 $navbar-dark-color: black;
 $navbar-dark-active-color: $colorDarkGrey;
 $navbar-dark-hover-color: $colorDarkGrey;
@@ -20,6 +21,7 @@ $navbar-dark-toggler-border-color: $colorDarkGrey;
 @import "partials/modal";
 @import "partials/accommodations";
 @import "partials/accommodation";
+@import "partials/forms";
 
 
 
