started styling the admin page

--- a/src/sass/partials/_layout.scss
+++ b/src/sass/partials/_layout.scss
@@ -2,6 +2,15 @@ html, body {
   height: 100%;
 }
 
+.link {
+  font-size: 20px;
+
+}
+
+.link:hover {
+  font-weight: 600;
+}
+
 /* nav */
 
 .desktop-logo--image {
