styled add new accommodation form

--- a/src/sass/partials/_admin.scss
+++ b/src/sass/partials/_admin.scss
@@ -2,8 +2,14 @@
   min-height: 75vh;
 }
 
-#mainpic--container {
-  width: 150px;
-  height: 150px;
+.mainpic--container {
+  width: 260px;
+  height: 260px;
+  cursor: pointer;
+}
+
+.subpic--container {
+  width: 130px;
+  height: 130px;
   cursor: pointer;
 }
