--- a/src/sass/partials/_accommodations.scss
+++ b/src/sass/partials/_accommodations.scss
@@ -12,13 +12,19 @@
   &--facility {
     background-color: $colorDarkGrey;
   }
+
+  &--category {
+    border: 2px solid #d9d9d9;
+    border-radius: 20px;
+    cursor: pointer;
+  }
+
+  &--category--clicked {
+    border: 2px solid black;
+  }
 }
 
-.accommodations--category {
-  border: 1px solid #d9d9d9;
-  border-radius: 20px;
-  cursor: pointer;
-}
+
 
 .question {
   background-color: #808080;
