--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -5,11 +5,12 @@ $success: #22B527;
 $colorDarkGrey: #808080;
 $colorLightGrey: #F7F7F7;
 $colorOrange: #F25C05;
+$dark: #592115;
 $link-color: $colorOrange;
 $link-hover-color: $colorOrange;
-$navbar-dark-color: black;
-$navbar-dark-active-color: $colorDarkGrey;
-$navbar-dark-hover-color: $colorDarkGrey;
+$navbar-dark-color: $colorLightGrey;
+$navbar-dark-active-color: $light;
+$navbar-dark-hover-color: $light;
 $font-family-sans-serif: 'Montserrat',
 sans-serif;
 $navbar-dark-toggler-border-color: $colorDarkGrey;
@@ -26,7 +27,3 @@ $navbar-dark-toggler-border-color: $colorDarkGrey;
 @import "partials/accommodation";
 @import "partials/forms";
 @import "partials/admin";
-
-
-
-
