--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -27,3 +27,4 @@ $navbar-dark-toggler-border-color: $colorDarkGrey;
 @import "partials/accommodation";
 @import "partials/forms";
 @import "partials/admin";
+@import "partials/common";
