--- a/src/sass/partials/_common.scss
+++ b/src/sass/partials/_common.scss
@@ -1,11 +1,11 @@
 .loader {
-  border: 16px solid #f3f3f3;
+  border: 16px solid $colorLightGrey;
   border-radius: 50%;
-  border-top: 16px solid blue;
-  border-bottom: 16px solid blue;
+  border-top: 16px solid $primary;
+  border-bottom: 16px solid $colorOrange;
   width: 120px;
   height: 120px;
-  -webkit-animation: spin 2s linear infinite;
+  -webkit-animation: spin 3s linear infinite;
   animation: spin 2s linear infinite;
 }
 
