--- a/src/sass/partials/_home.scss
+++ b/src/sass/partials/_home.scss
@@ -17,6 +17,11 @@
     color: white;
     -webkit-text-fill-color: white;
     -webkit-text-stroke-width: 1px;
+
+
+    @media only screen and (max-width: 600px) {
+      font-size: 70px;
+    }
   }
 }
 
@@ -26,6 +31,7 @@
 
   &--button {
     width: 300px;
+    margin: 0 auto; 
   }
 
   &--image {
