--- a/src/sass/partials/_accommodation.scss
+++ b/src/sass/partials/_accommodation.scss
@@ -8,9 +8,9 @@
 }
 
 .enquiryform--container {
-  background-color: $colorDarkGrey;
-  padding-top: 100px;
-  padding-bottom: 100px;
+  border: 5px solid $colorDarkGrey;
+  padding-top: 70px;
+  padding-bottom: 50px;
   border-radius: 20px;
   margin-top: 70px;
 }
