--- a/src/sass/partials/_home.scss
+++ b/src/sass/partials/_home.scss
@@ -38,6 +38,12 @@
     border-radius: 20px;
   }
 
+  &--image:hover {
+    backdrop-filter: blur(2px);
+    filter: blur(2px);
+    transition: 0.5s ease;
+  }
+
   &--text {
     border-radius: 0 0 20px 20px;
   }
