made carousel indiactors round

--- a/src/sass/partials/_accommodation.scss
+++ b/src/sass/partials/_accommodation.scss
@@ -20,7 +20,7 @@
   margin: 0 8px;
   opacity: 1;
   background-color: white;
-  border-radius: 2px/2px;
+  border-radius: 50%;
   box-shadow: 2px 2px 10px $black;
   border-top: none;
   border-bottom: none;
